--- a/manifest/1-serviceaccount.yaml
+++ b/manifest/1-serviceaccount.yaml
@@ -3,4 +3,4 @@ kind: ServiceAccount
 metadata:
   name: mongo-backup
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::471112673321:role/<role-name>
+    eks.amazonaws.com/role-arn: arn:aws:iam::471112673321:role/inventoryservice
