--- a/manifest/4-mongodb.yaml
+++ b/manifest/4-mongodb.yaml
@@ -1,28 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: backup-cron
-data:
-  backup.sh: |
-    #!/bin/bash
-    TIMESTAMP=$(date +"%F-%T")
-    BACKUP_DIR="/backups/mongo_backup_${TIMESTAMP}"
-    mkdir -p ${BACKUP_DIR}
-
-    # Dump MongoDB Database
-    mongodump --host mongo --port 27017 --username root --password passVerify --db inventory --out ${BACKUP_DIR}
-
-    # Upload backup to S3
-    aws s3 cp ${BACKUP_DIR} s3://<your-bucket-name>/ --recursive
-
-    # Clean up backups older than 30 days
-    find /backups -type f -mtime +30 -exec rm {} \;
-
-  cron-job: |
-    # Backup every day at 2am
-    0 2 * * * root /bin/bash /usr/local/bin/aws/backup.sh
-
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -58,7 +33,12 @@ spec:
           name: aws-cli-bin
         - mountPath: /etc/cron.d
           name: backup-cron
-        restartPolicy: Always
+      volumes:
+      - name: aws-cli-bin
+        emptyDir: {}
+      - name: backup-cron
+        configMap:
+          name: backup-cron
   volumeClaimTemplates:
   - metadata:
       name: mongo-data
@@ -67,10 +47,17 @@ spec:
       resources:
         requests:
           storage: 10Gi
-      storageClassName: gp2  # AWS EBS
-  volumes:
-  - name: aws-cli-bin
-    emptyDir: {}
-  - name: backup-cron
-    configMap:
-      name: backup-cron
+      storageClassName: backup  # AWS EBS
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongo
+spec:
+  selector:
+    app: mongo
+  ports:
+    - protocol: TCP
+      port: 27017
+      targetPort: 27017
+  type: NodePort
