--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,7 @@ jobs:
       
     - name: Deploy to Kubernetes
       run: |
+        kubectl apply -f manifest/0-clusterrole.yaml
         kubectl apply -f manifest/1-serviceaccount.yaml
         kubectl apply -f manifest/2-configmap.yaml
         kubectl apply -f manifest/3-persistentstorage.yaml
